# moyu-reader

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
docs/: CLAUDE.md  architecture.md  audit-2025-09-21.md  settings-window-dev.md
src-tauri/: AGENTS.md  CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: CLAUDE.md  default.json
src-tauri/icons/: AGENTS.md  icon.icns
src-tauri/icons/android/: AGENTS.md
src-tauri/icons/android/mipmap-hdpi/: AGENTS.md
src-tauri/icons/android/mipmap-mdpi/: CLAUDE.md
src-tauri/icons/android/mipmap-xhdpi/: CLAUDE.md
src-tauri/icons/android/mipmap-xxhdpi/: CLAUDE.md
src-tauri/icons/android/mipmap-xxxhdpi/: CLAUDE.md
src-tauri/icons/ios/: AGENTS.md
src-tauri/src/: AGENTS.md  app_state.rs  commands.rs  main.rs  novel.rs  settings.rs  tray.rs
