[package]
name = "moyu-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chardetng = "0.1"
encoding_rs = "0.8"
anyhow = "1"
thiserror = "1"
dirs = "6"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
